style: fix grammar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <h1>Фото квазибубы</h1>
-        <h2>(в естесственной среде обитания)</h2>
+        <h2>(в естественной среде обитания)</h2>
         <img id="cat-image" src="./img/lissy.jpg" alt="Лисси">
         <div id="todo-list">
             <h2>Список заданий:</h2>
